6-istio-基础演示/3-集群外部和网格内通信/1-nginx-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: istio-test
spec:
  hosts:
  - "nginx.hihihiai.com"
  - "nginx"
  gateways:
  - nginx-test-gateway
  - mesh
  http:
  - route:
    - destination:
        host: nginx
        subset: appv1
      weight: 30
    - destination:
        host: nginx
        subset: appv2
      weight: 70
